mdapipkg/objects/Account.object
<CustomObject>
    <fields>
        <fullName>c2g__CODAIncomeTaxType__c</fullName>
        <description>Income Tax Type</description>
        <label>Income Tax Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Rents</fullName>
                </value>
                <value>
                    <fullName>2 - Royalties</fullName>
                </value>
                <value>
                    <fullName>3 - Other Income</fullName>
                </value>
                <value>
                    <fullName>4 - Federal Income Tax Withheld</fullName>
                </value>
                <value>
                    <fullName>5 - Fishing Boat Proceeds</fullName>
                </value>
                <value>
                    <fullName>6 - Medical and Healthcare Payments</fullName>
                </value>
                <value>
                    <fullName>7 - Nonemployee Compensation</fullName>
                </value>
                <value>
                    <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
                </value>
                <value>
                    <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
                </value>
                <value>
                    <fullName>10 - Crop Insurance Proceeds</fullName>
                </value>
                <value>
                    <fullName>11 - Unused 11</fullName>
                </value>
                <value>
                    <fullName>12 - Unused 12</fullName>
                </value>
                <value>
                    <fullName>13 - Excess Golden Parachute Payments</fullName>
                </value>
                <value>
                    <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
                </value>
                <value>
                    <fullName>Not Reportable</fullName>
                    <default>true</default>
                    <label>Not Reportable</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAInputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Input VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAIntercompanyAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intercompany Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODAInvoiceEmail__c</fullName>
        <label>Invoice Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>c2g__CODAMergeId__c</fullName>
        <label>Merge Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAOutputVATCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODAPaymentMethod__c</fullName>
        <description>The payment method</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAReportingCode__c</fullName>
        <description>A unique code used for reporting</description>
        <label>Reporting Code</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__CODASalesTaxStatus__c</fullName>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                    <default>true</default>
                    <label>Taxable</label>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAShippingAddressIsValid__c</fullName>
        <formula>NOT(ISBLANK(ShippingStreet) &amp;&amp;
ISBLANK(ShippingCity) &amp;&amp;
ISBLANK(ShippingState) &amp;&amp;
ISBLANK(ShippingPostalCode) &amp;&amp;
ISBLANK(ShippingCountry)) &amp;&amp;
c2g__CODAValidatedShippingStreet__c == ShippingStreet &amp;&amp;
c2g__CODAValidatedShippingCity__c == ShippingCity &amp;&amp;
c2g__CODAValidatedShippingState__c == ShippingState &amp;&amp;
c2g__CODAValidatedShippingPostCode__c == ShippingPostalCode &amp;&amp;
c2g__CODAValidatedShippingCountry__c == ShippingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCalculationMethod__c</fullName>
        <description>The method of calculating tax in the UK.</description>
        <label>Tax Calculation Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gross</fullName>
                    <default>true</default>
                    <label>Gross</label>
                </value>
                <value>
                    <fullName>Net of Discount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 1</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CODATaxpayerIdentificationNumber__c</fullName>
        <description>Taxpayer Identification Number</description>
        <label>Taxpayer Identification Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAUnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATRegistrationNumber__c</fullName>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAVATStatus__c</fullName>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCity__c</fullName>
        <label>ValidatedBillingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingCountry__c</fullName>
        <label>ValidatedBillingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingPostCode__c</fullName>
        <label>ValidatedBillingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingState__c</fullName>
        <label>ValidatedBillingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedBillingStreet__c</fullName>
        <label>ValidatedBillingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCity__c</fullName>
        <label>ValidatedShippingCity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingCountry__c</fullName>
        <label>ValidatedShippingCountry</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingPostCode__c</fullName>
        <label>ValidatedShippingPostCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingState__c</fullName>
        <label>ValidatedShippingState</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CODAValidatedShippingStreet__c</fullName>
        <label>ValidatedShippingStreet</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ffaci__CurrencyCulture__c</fullName>
        <label>Currency Culture</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__AccountParticulars__c</fullName>
        <label>Account Particulars</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__BankBIC__c</fullName>
        <label>Bank BIC</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCode__c</fullName>
        <label>Payment Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentCountryISO__c</fullName>
        <label>Payment Country ISO</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbf__PaymentPriority__c</fullName>
        <label>Payment Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>N</label>
                </value>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffbf__PaymentRoutingMethod__c</fullName>
        <label>Payment Routing Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ExemptionCertificate__c</fullName>
        <description>Tax exemption certificate for the account. We recommend that you use the tax exemption features of Avalara. Use this field only when you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</description>
        <inlineHelpText>Tax exemption certificate for the account. Enter a value if you are not required to collect tax for the account and your finance team tracks and verifies tax exemption certificates manually.</inlineHelpText>
        <label>Exemption Certificate</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsBillingAddressValidated__c</fullName>
        <description>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(BillingStreet) &amp;&amp;
              ISBLANK(BillingCity) &amp;&amp; 
              ISBLANK(BillingState) &amp;&amp;
              ISBLANK(BillingPostalCode) &amp;&amp;
              ISBLANK(BillingCountry) 
            ) &amp;&amp; 
            ( BillingStreet  =  fferpcore__ValidatedBillingStreet__c ) &amp;&amp;
            ( BillingCity =  fferpcore__ValidatedBillingCity__c ) &amp;&amp;
            ( BillingState =  fferpcore__ValidatedBillingState__c ) &amp;&amp;  
            ( BillingPostalCode =  fferpcore__ValidatedBillingPostalCode__c ) &amp;&amp;
            ( BillingCountry =  fferpcore__ValidatedBillingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the billing address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Billing Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__IsShippingAddressValidated__c</fullName>
        <description>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(ShippingStreet) &amp;&amp;
              ISBLANK(ShippingCity) &amp;&amp; 
              ISBLANK(ShippingState) &amp;&amp;
              ISBLANK(ShippingPostalCode) &amp;&amp;
              ISBLANK(ShippingCountry) 
            ) &amp;&amp; 
            ( ShippingStreet  =  fferpcore__ValidatedShippingStreet__c ) &amp;&amp;
            ( ShippingCity =  fferpcore__ValidatedShippingCity__c ) &amp;&amp;
            ( ShippingState =  fferpcore__ValidatedShippingState__c ) &amp;&amp;  
            ( ShippingPostalCode =  fferpcore__ValidatedShippingPostalCode__c ) &amp;&amp;
            ( ShippingCountry =  fferpcore__ValidatedShippingCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the shipping address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Shipping Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__OutputVatCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The tax code to be used when calculating tax in a VAT or GST company.</description>
        <inlineHelpText>The tax code to be used when calculating tax in a VAT or GST company.</inlineHelpText>
        <label>Output VAT/GST Code</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Output VAT/GST Code)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__SalesTaxStatus__c</fullName>
        <description>The tax status for this account for SUT companies.</description>
        <inlineHelpText>The tax status for this account for SUT companies.</inlineHelpText>
        <label>Sales Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Taxable</fullName>
                </value>
                <value>
                    <fullName>Exempt</fullName>
                </value>
                <value>
                    <fullName>Exempt for Qualifying Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The first SUT tax code for this account.</description>
        <inlineHelpText>The first SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 1</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 1)</relationshipLabel>
        <relationshipName>AccountsTC1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The second SUT tax code for this account.</description>
        <inlineHelpText>The second SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 2</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 2)</relationshipLabel>
        <relationshipName>AccountsTC2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The third SUT tax code for this account.</description>
        <inlineHelpText>The third SUT tax code for this account.</inlineHelpText>
        <label>Tax Code 3</label>
        <referenceTo>fferpcore__TaxCode__c</referenceTo>
        <relationshipLabel>Accounts (Tax Code 3)</relationshipLabel>
        <relationshipName>AccountsTC3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxCountryCode__c</fullName>
        <description>Code for the European Union country in which this account operates. You can update the entries in this custom picklist if required.
The country code is required for the correct reporting of VAT on cross-border trades within the European Union.</description>
        <inlineHelpText>The country code for this account. This is required for correct reporting of VAT on cross-border trades within the European Union.</inlineHelpText>
        <label>Tax Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>fferpcore__TaxCountryCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCity__c</fullName>
        <label>Validated Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingCountry__c</fullName>
        <label>Validated Billing Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingPostalCode__c</fullName>
        <label>Validated Billing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingState__c</fullName>
        <label>Validated Billing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedBillingStreet__c</fullName>
        <label>Validated Billing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCity__c</fullName>
        <label>Validated Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingCountry__c</fullName>
        <label>Validated Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingPostalCode__c</fullName>
        <label>Validated Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingState__c</fullName>
        <label>Validated Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__ValidatedShippingStreet__c</fullName>
        <label>Validated Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatRegistrationNumber__c</fullName>
        <description>Identifying number used for VAT purposes.</description>
        <inlineHelpText>Identifying number used for tax purposes.</inlineHelpText>
        <label>Tax Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__VatStatus__c</fullName>
        <description>The tax status for this account for VAT/GST accounts.</description>
        <inlineHelpText>The tax status for this account for VAT/GST accounts.</inlineHelpText>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>EC Non-registered</fullName>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xYPOI_Collects_Chapter_Dues__c</fullName>
        <label>xYPOI Collects Chapter Dues?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Past</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>Active_Chapters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>YPOI_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CBMS__c</columns>
        <columns>New_Member_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Chapter</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Dissolved,Inactive</value>
        </filters>
        <label>Active Chapters</label>
        <sharedTo>
            <group>Chpt_Mbrshp_Officer</group>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ActEventCommittees</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Start_Date__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>Category__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Committee</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Event</value>
        </filters>
        <label>Committees - Active Event only</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Association</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Association</value>
        </filters>
        <label>Associations - All</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Business</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Business</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Business</value>
        </filters>
        <label>Businesses - All</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Chapters</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>YPOI_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CBMS__c</columns>
        <columns>New_Member_Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Chapter</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>contains</operation>
            <value>wpo</value>
        </filters>
        <label>wpo Chapters</label>
        <sharedTo>
            <group>Chpt_Mbrshp_Officer</group>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forums</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>New_Member_Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Number_of_Non_YPOI_Members__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Forum</value>
        </filters>
        <label>Forums - Active</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Forums_Ty</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>Category__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>New_Member_Status__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Number_of_Non_YPOI_Members__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Forum</value>
        </filters>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>ypo dallas</value>
        </filters>
        <label>Forums - Active Ty</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_GovCommittees</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Committee</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>International</value>
        </filters>
        <label>Committees - Governance</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Networks</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Enrollment_Method__c</columns>
        <columns>Network_Sub_Network__c</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Network</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Networks - Active</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NonGovCommittees</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>PARENT_NAME</columns>
        <columns>Category__c</columns>
        <columns>Start_Date__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Committee</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>notEqual</operation>
            <value>International,Event</value>
        </filters>
        <label>Committees - Non-Governance Active</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Region</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Record_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Region</value>
        </filters>
        <filters>
            <field>Record_Type_Name__c</field>
            <operation>equals</operation>
            <value>chapter</value>
        </filters>
        <label>Regions - Active</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Schools</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.School</value>
        </filters>
        <label>Schools - All</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_SuperRegion</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>YPOI_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Super-Region</value>
        </filters>
        <label>Super Regions - Active</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Tradeshow</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Tradeshow</value>
        </filters>
        <label>Tradeshows - All</label>
        <sharedTo>
            <role>YPO</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Benefit</fullName>
        <active>true</active>
        <label>Benefit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business</fullName>
        <active>true</active>
        <description>Businesses and Associations</description>
        <label>Business</label>
    </recordTypes>
</CustomObject>